--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -14,4 +14,4 @@ jobs:
               uses: orgoro/coverage@v2
               with:
                 coverageFile: .github/coverage-configs.xml
-                token: ${{ secrets.APPROVE_TOKEN }}
+                token: ${{ secrets.HUB_TOKEN }}
