Refactored setup and publishing workflows
Refactored setup and publishing workflows

--- a/.github/workflows/package-and-publish-beta.yml
+++ b/.github/workflows/package-and-publish-beta.yml
@@ -20,8 +20,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install build
+        y | rm setup.py
+        mv Setup/PreRelease/setup.py ../../
     - name: Build package
-      run: python setup-prerelease.py sdist
+      run: python setup.py sdist
     - name: Publish package
       uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
       with:
