--- a/.github/workflows/semver-develop.yml
+++ b/.github/workflows/semver-develop.yml
@@ -24,7 +24,7 @@ jobs:
           SUBSTRING="Ready for review"
           if [[ $LAST_COMMIT == *"$SUBSTRING"* ]]; then
             echo "Patch Version to be bumped"
-            CURRENT_VERSION=`cat version.txt`
+            CURRENT_VERSION=`cat Setup/version.txt`
             echo "Current Version: $CURRENT_VERSION"
             arrVERSION=(${CURRENT_VERSION//./ })
             ((arrVERSION[2]++))
