Ready for review
Ready for review

--- a/.github/pull-request-annotator.yml
+++ b/.github/pull-request-annotator.yml
@@ -1,6 +1,9 @@
-feature: 'feature/*'
-bugfix: 'bugfix/*'
-chore: 'chore/*'
-cicd: 'cicd/*'
-client: '*client*'
-server: '*server*'
+Feature: 'feature/*'
+Bugfix: 'bugfix/*'
+Chore: 'chore/*'
+CICD: 'cicd/*'
+Client: '*client*'
+Server: '*server*'
+Setup: '*setup*'
+Test: '*test*'
+Automation: '*automation*'
